tests/Unit/PHPStan/Rules/Naming/Fixtures/TypeSuffixMismatch/Valid/EdgeCases/TemplateUnboundedTypedProperty.php
<?php

declare(strict_types=1);

namespace TypeSuffixMismatchFixtures\Valid\EdgeCases;

/**
 * @template TConnection
 */
final class TemplateUnboundedTypedProperty
{
    /** @var TConnection */
    private object $connection;
}
