tests/Unit/PHPStan/Rules/Naming/Fixtures/TypeSuffixMismatch/Invalid/InterfaceBareNameNotice.php
<?php

declare(strict_types=1);

namespace TypeSuffixMismatchFixtures\Invalid;

final class InterfaceBareNameNotice
{
    private ChannelInterface $channel;
}
